// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.datacollection;

option java_multiple_files = true;

message DataCollectionPerpetualTaskParams {
  string account_id = 1;
  string data_collection_worker_id = 2;
  bytes data_collection_info = 3;
}
